# companion

./: .gitignore  Cargo.toml  HARDWARE.md  README.md  flake.nix  out.rs  pyproject.toml  requirements.txt  rust-toolchain.toml
analysis/: .gitignore  Cargo.toml  bench_test.ipynb  inv_pend.ipynb  kalman.ipynb  main.py  stuff.ipynb
analysis/src/: main.rs
common/: Cargo.toml
common/src/: dp.rs  ekf.rs  lib.rs  model.rs
dp/: Cargo.toml
dp/src/: main.rs
firmware/: Cargo.toml  out  stop.sh
firmware/.cargo/: config.toml
firmware/src/: assign.rs  controller.rs  dptable.rs  encoder.rs  lib.rs  motor.rs  resources.rs  server.rs
firmware/src/entrypoints/: benchtest.rs  main.rs  mod.rs  test_encoder.rs
receiver/: Cargo.toml
receiver/src/: main.rs
src/: lib.rs  server.rs
