[package]
name = "firmware"
version = "0.1.0"
edition = "2024"


[dependencies]
embassy-rp = { version = "0.3.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-net = { version = "0.7.0", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
embassy-futures = { version = "0.1.0" }
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.3.0", features = ["defmt"] }


defmt = "0.3"
defmt-rtt = "0.4"

# # for assign resources example
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "94ad10e2729afdf0fd5a77cd12e68409a982f58a" }

cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = "0.8"

embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
static_cell = "2.1"
libm = "0.2.11"
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
common = {path = "../common"}
bincode = { version = "2.0.1", default-features = false, features = ["serde"] }
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
embedded-alloc = "0.6.0"

[patch.crates-io]
embassy-time = {git = "https://github.com/embassy-rs/embassy", rev="17301c00e986c5b8536435ea31ebf5aaf13aed17"}
embassy-rp = {git = "https://github.com/embassy-rs/embassy", rev="17301c00e986c5b8536435ea31ebf5aaf13aed17"}
embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev="17301c00e986c5b8536435ea31ebf5aaf13aed17"}
embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev="17301c00e986c5b8536435ea31ebf5aaf13aed17"}
embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev="17301c00e986c5b8536435ea31ebf5aaf13aed17"}
embassy-net = {git = "https://github.com/embassy-rs/embassy", rev="17301c00e986c5b8536435ea31ebf5aaf13aed17"}

cyw43-pio = {git = "https://github.com/embassy-rs/embassy", rev="17301c00e986c5b8536435ea31ebf5aaf13aed17"}
cyw43 = {git = "https://github.com/embassy-rs/embassy", rev="17301c00e986c5b8536435ea31ebf5aaf13aed17"}

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
